Fri Oct 28 03:01:27 2011  Aaron Patterson <aaron@tenderlovemaking.com>

	* vm_insnhelper.c (vm_call_cfunc): adding back useless hack.  For some
	  reason, this fixes CFP errors on OS X 10.7.

Fri Oct 28 00:09:31 2011  Tanaka Akira  <akr@fsij.org>

	* ext/sdbm/_sdbm.c (sdbm_prep): refactored for less nesting.

Thu Oct 27 18:28:18 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (RUBY_DEFINE_IF): revert r33534 partially to get
	  rid of AS_ECHO which is not available in autoconf 2.61.
	  [ruby-dev:44702]

Thu Oct 27 16:10:46 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* bignum.c (rb_big_divide): raise ZeroDivisionError if divisor is
	  zero, as well as Fixnum.  [ruby-core:40429] [Bug #5490]

Thu Oct 27 14:56:22 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (RUBY_FUNC_ATTRIBUTE): unset temporary variable.

	* configure.in (RUBY_STACK_GROW_DIRECTION): substitute CPU name as
	  shell variable name.  based on the patch by The Written Word Inc. at
	  [ruby-core:40421].  [Bug #5488]

Thu Oct 27 09:57:56 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* include/ruby/ruby.h (SIZE_MAX): define SIZE_MAX if not defined.
	  patched by The Written Word Inc. [ruby-core:40422] [Bug #5489]

Thu Oct 27 08:47:38 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* ext/psych/parser.c: remove unused variable.

Thu Oct 27 08:38:41 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* ext/openssl/extconf.rb: add -Wall flag by default when compiler is
	  GCC.

Wed Oct 26 15:24:25 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rb_file_join): honor input encodings than ASCII-8BIT.
	  [ruby-core:40338] [Bug #5483]

Tue Oct 25 21:52:31 2011  Tanaka Akira  <akr@fsij.org>

	* include/ruby/defines.h: use "__sparc" instead of "sparc" and
	  "__sparc__".

	* dln.c: ditto.

	  [ruby-dev:44694]

Tue Oct 25 06:34:39 2011  Eric Hodel  <drbrain@segment7.net>

	* re.c (match_aref):  Use <code> around indexing examples to prevent