@@ -1,3 +1,9 @@
+Fri Oct 28 06:06:08 2011  Tanaka Akira  <akr@fsij.org>
+
+	* ext/sdbm/_sdbm.c (sdbm_prep): set FD_CLOEXEC flags for file
+	  descriptors.
+	  (fd_set_cloexec): new function.
+
 Fri Oct 28 03:01:27 2011  Aaron Patterson <aaron@tenderlovemaking.com>
 
 	* vm_insnhelper.c (vm_call_cfunc): adding back useless hack.  For some
